--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ipsa alias possimus corporis esse, enim numquam sunt inventore! Nobis iure illo temporibus voluptatem. Odit at aut vero dolores accusantium tempore.</p>
+    <h2>End</h2>
 </body>
 </html>
